refactor:removed unnecessary code lines v2

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body class="body">
     <header class="header">
         <img src="./images/around.svg" class="header__logo" alt="around the US">
+        <!-- <img src="./images/icons/header__line.svg" alt=Header line" class="header__line"> -->
     </header>
 
     <main class="content">
-        <div class="separator"></div>
         <section class="profile">
             <img src="./images/avatar.jpg" alt="jACQUES cousteau" class="profile__image">
             <div class="profile__info">
@@ -85,7 +85,7 @@
         <div class="popup__container">
             <button class="popup__button-close" type="button"></button>
             <h2 class="popup__title">Edit profile</h2>
-            <form action="submit" class="form popup__form">
+            <form action="submit" class="form popup__form" name="form">
                 <fieldset class="form__fieldset">
                     <input type="text" name="name" placeholder="Name" required class="form__input">
                     <input type="text" name="title" placeholder="About me" required class="form__input">
