--- a/index.html
+++ b/index.html
@@ -30,51 +30,9 @@
             <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards">
-            <ul class="cards__list">
-                <li class="card">
-                    <img src="./images/image1.jpg" alt="Yosemite Valley" class="card__image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Yosemite Valley</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img src="./images/image2.jpg" alt="Lake Louise" class="card__image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Lake Louise</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img src="./images/image3.jpg" alt="Blad Mountains" class="card__image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Bald Mountains</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img src="./images/image4.jpg" alt="Latemar" class="card__image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Latemar</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img src="./images/image5.jpg" alt="Vanoise Nationa" class="card__image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Vanoise Nationa...</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-                <li class="card">
-                    <img src="./images/image6.jpg" alt="" class="card__image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Lago di Braies</h2>
-                        <button class="card__like-button" type="button"></button>
-                    </div>
-                </li>
-            </ul>
+            <ul class="cards__list"></ul>
         </section>
+
     </main>
     <footer class="footer">
         <p class="footer__copyrights">© 2021 Around The U.S.</p>
@@ -94,6 +52,17 @@
             </form>
         </div>
     </div>
+    <template id="card-template">
+        <li class="card">
+            <button type="button" aria-label="delete card" class="card__image-trash"></button>
+            <img src="#" alt="#" class="card__image" />
+            <div class="card__info">
+                <h2 class="card__info-title"></h2>
+                <button class="card__like-button" type="button" aria-label="like card"></button>
+            </div>
+        </li>
+    </template>
+
     <script src="./scripts/index.js"></script>
 </body>
 
