feat:added JavaScript code (add/delete/preview/like) for photos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main class="content">
         <section class="profile">
-            <img src="./images/avatar.jpg" alt="jACQUES cousteau" class="profile__image">
+            <img src="./images/avatar.jpg" alt="Jacques cousteau" class="profile__image">
             <div class="profile__info">
                 <div class="profile__person">
                     <h1 class="profile__name">Jacques Cousteau</h1>
@@ -37,7 +37,7 @@
     <footer class="footer">
         <p class="footer__copyrights">© 2021 Around The U.S.</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_edit-profile">
         <div class="popup__container">
             <button class="popup__button-close" type="button"></button>
             <h2 class="popup__title">Edit profile</h2>
@@ -52,6 +52,27 @@
             </form>
         </div>
     </div>
+
+    <div class="popup popup_type_add-place">
+        <div class="popup__container">
+            <button class="popup__button-close popup__button-close_type_place" type="button"></button>
+            <h2 class="popup__title">New Place</h2>
+            <form action="submit" class="form popup__form popup__form_type_add-place">
+                <fieldset class="form__fieldset">
+                    <input type="text" name="card-title" placeholder="Title"
+                        class="form__input form__input_type_place-name" required />
+                    <input type="url" name="card-link" placeholder="Image link"
+                        class="form__input form__input_type_place-url" required />
+                </fieldset>
+                <fieldset class="form__fieldset">
+                    <button class="form__button form__button_type_place" type="submit">
+                        Save
+                    </button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
     <template id="card-template">
         <li class="card">
             <button type="button" aria-label="delete card" class="card__image-trash"></button>
@@ -62,6 +83,13 @@
             </div>
         </li>
     </template>
+    <div class="popup popup_type_image-prev ">
+        <div class=" popup__container_image-preview">
+            <button class="popup__close-button_preview" type="button"></button>
+            <img src="#" alt="#" class="popup__image" />
+            <p class="popup__caption"></p>
+        </div>
+    </div>
 
     <script src="./scripts/index.js"></script>
 </body>
