--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             </div>
         </li>
     </template>
-    <div class="popup popup__image-prev ">
-        <div class="popup__image-prev-container">
-            <button class="popup__image-prev-container_close" type="button"></button>
+    <div class="popup popup__preview ">
+        <div class="popup__preview-container">
+            <button class="popup__close-button" type="button"></button>
             <img src="#" alt="#" class="popup__image" />
             <p class="popup__caption"></p>
         </div>
