--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </li>
     </template>
-    <div class="popup__preview-img popup ">
+    <div class="popup__preview__img popup ">
         <div class="popup__preview-container">
             <button class="popup__close-button" type="button"></button>
             <img src="#" alt="#" class="popup__image" />
