--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <footer class="footer">
         <p class="footer__copyrights">© 2021 Around The U.S.</p>
     </footer>
-    <div class="popup popup_type_edit-profile">
+    <div class="popup popup__type_edit-profile">
         <div class="popup__container">
             <button class="popup__button-close" type="button"></button>
             <h2 class="popup__title">Edit profile</h2>
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="popup popup_type_add-place">
+    <div class="popup popup__type_add-place">
         <div class="popup__container">
             <button class="popup__button-close popup__button-close_type_place" type="button"></button>
             <h2 class="popup__title">New Place</h2>
@@ -83,7 +83,7 @@
             </div>
         </li>
     </template>
-    <div class="popup__preview popup ">
+    <div class="popup-prev popup ">
         <div class="popup__preview-container">
             <button class="popup__close-button" type="button"></button>
             <img src="#" alt="#" class="popup__image" />
