--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="popup place__add">
+    <div class="popup popup__place">
         <div class="popup__container">
             <button class="popup__button-close popup__button-close-type-place" type="button"></button>
             <h2 class="popup__title">New Place</h2>
