refactor:Edited javascript file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <footer class="footer">
         <p class="footer__copyrights">© 2021 Around The U.S.</p>
     </footer>
-    <div class="popup ">
+    <div class="popup popup-edit-profile ">
         <div class="popup__container">
             <button class="popup__button-close" type="button"></button>
             <h2 class="popup__title">Edit profile</h2>
