added JS functions close ESC+mouse click

--- a/index.html
+++ b/index.html
@@ -43,8 +43,16 @@
             <h2 class="popup__title">Edit profile</h2>
             <form action="submit" class="form popup__form" name="form">
                 <fieldset class="form__fieldset">
-                    <input type="text" name="name" placeholder="Name" required class="form__input">
-                    <input type="text" name="title" placeholder="About me" required class="form__input">
+                    <div class="form__input-container">
+                        <input id="name-input" type="text" name="name" placeholder="Name" required
+                            class="form__input form__input-errorline">
+                        <span id="name-input-error" class="form__input-error"></span>
+                    </div>
+                    <div class="form__input-container">
+                        <input id="subname-input" type="text" name="title" placeholder="About me" required
+                            class="form__input form__input-errorline">
+                        <span id="subname-input-error" class="form__input-error"></span>
+                    </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
                     <button class="form__button" type="submit">Save</button>
@@ -92,6 +100,9 @@
     </div>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
+
+
 </body>
 
 </html>
