--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <fieldset class="form__fieldset">
                     <div class="form__input-container">
                         <input id="name-input" type="text" name="name" placeholder="Name" required
-                            class="form__input form__input-errorline">
-                        <span id="name-input-error" class="form__input-error"></span>
+                            class="form__input form__input-errorline" minlength="2" maxlength="40">
+                        <span class="form__input-error form__input-type-profile-name" id="name-inputtt"></span>
                     </div>
                     <div class="form__input-container">
                         <input id="subname-input" type="text" name="title" placeholder="About me" required
-                            class="form__input form__input-errorline">
-                        <span id="subname-input-error" class="form__input-error"></span>
+                            class="form__input form__input-errorline" minlength="2" maxlength="200">
+                        <span class="form__input-error form__input-type-profile-subname"></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
@@ -67,10 +67,16 @@
             <h2 class="popup__title">New Place</h2>
             <form action="submit" class="form popup__form popup__form-type-add-place">
                 <fieldset class="form__fieldset">
-                    <input type="text" name="card-title" placeholder="Title"
-                        class="form__input form__input-type-place-name" required />
-                    <input type="url" name="card-link" placeholder="Image link"
-                        class="form__input form__input-type-place-url" required />
+                    <div class="form__input-container">
+                        <input type="text" name="card-title" placeholder="Title"
+                            class="form__input form__input-type-place-name" required minlength="1" maxlength="30" />
+                        <span class="form__input-error form__input-type-place-name"></span>
+                    </div>
+                    <div class="form__input-container">
+                        <input type="url" name="card-link" placeholder="Image link"
+                            class="form__input form__input-type-place-url" required />
+                        <span class="form__input-error form__input-type-place-url"></span>
+                    </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
                     <button class="form__button" type="submit">
