added form validity

--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
             <form action="submit" class="form popup__form" name="form">
                 <fieldset class="form__fieldset">
                     <div class="form__input-container">
-                        <input id="name-input" type="text" name="name" placeholder="Name" required
-                            class="form__input form__input-errorline" minlength="2" maxlength="40">
-                        <span class="form__input-error form__input-type-profile-name" id="name-inputtt"></span>
+                        <input id="name-input" type="text" name="name" placeholder="Name" required class="form__input "
+                            minlength="2" maxlength="40">
+                        <span class="form__input-error form__input-type-profile-name" id="name-input-error"></span>
                     </div>
                     <div class="form__input-container">
                         <input id="subname-input" type="text" name="title" placeholder="About me" required
-                            class="form__input form__input-errorline" minlength="2" maxlength="200">
-                        <span class="form__input-error form__input-type-profile-subname"></span>
+                            class="form__input" minlength="2" maxlength="200">
+                        <span id="subname-input-error"
+                            class="form__input-error form__input-type-profile-subname"></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
-                    <button class="form__button" type="submit">Save</button>
+                    <button id="form__button" class="form__button" type="submit">Save</button>
                 </fieldset>
             </form>
         </div>
@@ -68,14 +69,16 @@
             <form action="submit" class="form popup__form popup__form-type-add-place">
                 <fieldset class="form__fieldset">
                     <div class="form__input-container">
-                        <input type="text" name="card-title" placeholder="Title"
+                        <input id="form__input-type-place-name" type="text" name="card-title" placeholder="Title"
                             class="form__input form__input-type-place-name" required minlength="1" maxlength="30" />
-                        <span class="form__input-error form__input-type-place-name"></span>
+                        <span id="form__input-type-place-name-error"
+                            class="form__input-error form__input-type-place-name-error"></span>
                     </div>
                     <div class="form__input-container">
                         <input type="url" name="card-link" placeholder="Image link"
-                            class="form__input form__input-type-place-url" required />
-                        <span class="form__input-error form__input-type-place-url"></span>
+                            class="form__input form__input-type-place-url" id="form__input-type-place-url" required />
+                        <span class="form__input-error form__input-type-place-url-error"
+                            id="form__input-type-place-url-error"></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
