--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
                     <div class="form__input-container">
                         <input id="name-input" type="text" name="name" placeholder="Name" required class="form__input "
                             minlength="2" maxlength="40">
-                        <span class="form__input-error form__input-type-profile-name" id="name-input-error"></span>
+                        <span class="form__input-error" id="name-input-error"></span>
                     </div>
                     <div class="form__input-container">
                         <input id="subname-input" type="text" name="title" placeholder="About me" required
                             class="form__input" minlength="2" maxlength="200">
-                        <span id="subname-input-error"
-                            class="form__input-error form__input-type-profile-subname"></span>
+                        <span id="subname-input-error" class="form__input-error "></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
@@ -77,8 +76,7 @@
                     <div class="form__input-container">
                         <input type="url" name="card-link" placeholder="Image link"
                             class="form__input form__input-type-place-url" id="form__input-type-place-url" required />
-                        <span class="form__input-error form__input-type-place-url-error"
-                            id="form__input-type-place-url-error"></span>
+                        <span class="form__input-error " id="form__input-type-place-url-error"></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
@@ -107,11 +105,8 @@
             <p class="popup__caption"></p>
         </div>
     </div>
-
-    <script src="./scripts/index.js"></script>
     <script src="./scripts/validate.js"></script>
-
-
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
