--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <p class="popup__caption"></p>
         </div>
     </div>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
+    <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
