refactored the close button

--- a/index.html
+++ b/index.html
@@ -37,54 +37,63 @@
     <footer class="footer">
         <p class="footer__copyrights">© 2021 Around The U.S.</p>
     </footer>
-    <div class="popup popup-edit-profile ">
-        <div class="popup__container">
-            <button class="popup__button-close" type="button"></button>
-            <h2 class="popup__title">Edit profile</h2>
-            <form action="submit" class="form popup__form" name="form">
-                <fieldset class="form__fieldset">
-                    <div class="form__input-container">
-                        <input id="name-input" type="text" name="name" placeholder="Name" required class="form__input "
-                            minlength="2" maxlength="40">
-                        <span class="form__input-error" id="name-input-error"></span>
-                    </div>
-                    <div class="form__input-container">
-                        <input id="subname-input" type="text" name="title" placeholder="About me" required
-                            class="form__input" minlength="2" maxlength="200">
-                        <span id="subname-input-error" class="form__input-error "></span>
-                    </div>
-                </fieldset>
-                <fieldset class="form__fieldset">
-                    <button id="form__button" class="form__button" type="submit">Save</button>
-                </fieldset>
-            </form>
+    <div class="popup ">
+        <div class="popup-edit-profile ">
+            <button class="popup__close-button" type="button"></button>
+
+            <div class="popup__container">
+
+
+                <h2 class="popup__title">Edit profile</h2>
+                <form action="submit" class="form popup__form" name="form">
+                    <fieldset class="form__fieldset">
+                        <div class="form__input-container">
+                            <input id="name-input" type="text" name="name" placeholder="Name" required
+                                class="form__input " minlength="2" maxlength="40">
+                            <span class="form__input-error" id="name-input-error"></span>
+                        </div>
+                        <div class="form__input-container">
+                            <input id="subname-input" type="text" name="title" placeholder="About me" required
+                                class="form__input" minlength="2" maxlength="200">
+                            <span id="subname-input-error" class="form__input-error "></span>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form__fieldset">
+                        <button id="form__button" class="form__button" type="submit">Save</button>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
 
-    <div class="popup-place popup">
-        <div class="popup__container">
-            <button class="popup__button-close popup__button-close-type-place" type="button"></button>
-            <h2 class="popup__title">New Place</h2>
-            <form action="submit" class="form popup__form popup__form-type-add-place">
-                <fieldset class="form__fieldset">
-                    <div class="form__input-container">
-                        <input id="form__input-type-place-name" type="text" name="card-title" placeholder="Title"
-                            class="form__input form__input-type-place-name" required minlength="1" maxlength="30" />
-                        <span id="form__input-type-place-name-error"
-                            class="form__input-error form__input-type-place-name-error"></span>
-                    </div>
-                    <div class="form__input-container">
-                        <input type="url" name="card-link" placeholder="Image link"
-                            class="form__input form__input-type-place-url" id="form__input-type-place-url" required />
-                        <span class="form__input-error " id="form__input-type-place-url-error"></span>
-                    </div>
-                </fieldset>
-                <fieldset class="form__fieldset">
-                    <button class="form__button" type="submit">
-                        Save
-                    </button>
-                </fieldset>
-            </form>
+    <div class="popup popup-place ">
+        <div class="popup-place">
+            <button class="popup__close-button " type="button"></button>
+
+            <div class="popup__container">
+                <h2 class="popup__title">New Place</h2>
+                <form action="submit" class="form popup__form popup__form-type-add-place">
+                    <fieldset class="form__fieldset">
+                        <div class="form__input-container">
+                            <input id="form__input-type-place-name" type="text" name="card-title" placeholder="Title"
+                                class="form__input form__input-type-place-name" required minlength="1" maxlength="30" />
+                            <span id="form__input-type-place-name-error"
+                                class="form__input-error form__input-type-place-name-error"></span>
+                        </div>
+                        <div class="form__input-container">
+                            <input type="url" name="card-link" placeholder="Image link"
+                                class="form__input form__input-type-place-url" id="form__input-type-place-url"
+                                required />
+                            <span class="form__input-error " id="form__input-type-place-url-error"></span>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form__fieldset">
+                        <button class="form__button" type="submit">
+                            Save
+                        </button>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
 
