refactor : classes refactored

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,16 +8,16 @@
     <title>Around The US</title>
     <meta name="author" content="Tamer JB" />
     <meta name="keywords" content=" USA, html, css, learning web development" />
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" link="<%('../../favicon.ico')%>" type="image/x-icon" />
 </head>
 
 <body class="body">
     <header class="header">
-        <img src="<%=require('./images/around.svg')%>" class="header__logo" alt="around the US">
+        <img src="<%=require('../images/around.svg')%>" class="header__logo" alt="around the US">
     </header>
     <main class="content">
         <section class="profile">
-            <img src="<%=require('./images/avatar.jpg')%>" alt="Jacques cousteau" class="profile__image">
+            <img src="<%=require('../images/avatar.jpg')%>" alt="Jacques cousteau" class="profile__image">
             <div class="profile__info">
                 <div class="profile__person">
                     <h1 class="profile__name">Jacques Cousteau</h1>
