fixed bug when adding new card

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -74,13 +74,13 @@
                 <form action="submit" class="form popup__form popup__form-type-add-place">
                     <fieldset class="form__fieldset">
                         <div class="form__input-container">
-                            <input id="form__input-type-place-name" type="text" name="card-title" placeholder="Title"
+                            <input id="form__input-type-place-name" type="text" name="placename" placeholder="Title"
                                 class="form__input form__input-type-place-name" required minlength="1" maxlength="30" />
                             <span id="form__input-type-place-name-error"
                                 class="form__input-error form__input-type-place-name-error"></span>
                         </div>
                         <div class="form__input-container">
-                            <input type="url" name="card-link" placeholder="Image link"
+                            <input type="url" name="link" placeholder="Image link"
                                 class="form__input form__input-type-place-url" id="form__input-type-place-url"
                                 required />
                             <span class="form__input-error " id="form__input-type-place-url-error"></span>
