added create card

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -74,7 +74,7 @@
                 <form action="submit" class="form popup__form popup__form-type-add-place">
                     <fieldset class="form__fieldset">
                         <div class="form__input-container">
-                            <input id="form__input-type-place-name" type="text" name="placename" placeholder="Title"
+                            <input id="form__input-type-place-name" type="text" name="name" placeholder="Title"
                                 class="form__input form__input-type-place-name" required minlength="1" maxlength="30" />
                             <span id="form__input-type-place-name-error"
                                 class="form__input-error form__input-type-place-name-error"></span>
