fixed the formvalidator problem

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -87,6 +87,8 @@
                                 required />
                             <span class="form__input-error " id="form__input-type-place-url-error"></span>
                         </div>
+
+
                     </fieldset>
                     <fieldset class="form__fieldset">
                         <button class="form__button" type="submit">
@@ -131,7 +133,7 @@
                     <div class="form__input-container">
                         <input id="avatar-input" type="url" name="link" placeholder="Profile Image link"
                             class="form__input form__input_type_avatar" required />
-                        <span class="form__input-error avatar-input-error"></span>
+                        <span class="form__input-error avatar-input-error" id="avatar__input-error"></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
