--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -125,15 +125,15 @@
     </div>
     <!-- edit avatar popup -->
     <div class="popup popup_type_avatar">
+        <button class="popup__close-button popup__close-button_type_avatar" type="button"></button>
         <div class="popup__container">
-            <button class="popup__close-button popup__close-button_type_avatar" type="button"></button>
-            <h2 class="popup__title">Change Profile Picture</h2>
+            <h2 class="popup__title">Change Profile Picture </h2>
             <form action="submit" class="form popup__form popup__form_type_avatar" novalidate autocomplete="off">
                 <fieldset class="form__fieldset">
                     <div class="form__input-container">
                         <input id="avatar-input" type="url" name="link" placeholder="Profile Image link"
                             class="form__input form__input_type_avatar" required />
-                        <span class="form__input-error avatar-input-error" id="avatar__input-error"></span>
+                        <span class="form__input-error avatar-input-error" id="avatar-input-error"></span>
                     </div>
                 </fieldset>
                 <fieldset class="form__fieldset">
@@ -146,11 +146,13 @@
     </div>
     <!-- delete card form -->
     <div class="popup popup-type-delete-card">
+        <button class="popup__close-button " type="button"></button>
+
         <div class="popup__container">
             <h2 class="popup__title">Are you sure?</h2>
             <form action="submit" class="form popup__form popup__form-type-delete-card" novalidate autocomplete="off">
                 <fieldset class="form__fieldset">
-                    <button class="form__button form__button-type-delete-card" type="submit">
+                    <button class="form__button " type="submit">
                         Yes
                     </button>
                 </fieldset>
