Pre First Review

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,11 +22,11 @@
             </div>
             <div class="profile__info">
                 <div class="profile__person">
-                    <h1 class="profile__name">Tamir</h1>
+                    <h1 class="profile__name"></h1>
                     <button class="profile__edit-button" type="button">
                     </button>
                 </div>
-                <p class="profile__title">hello</p>
+                <p class="profile__title"></p>
             </div>
             <button class="profile__add-button" type="button"></button>
         </section>
